--- a/.github/workflows/docs_from_notebook.yml
+++ b/.github/workflows/docs_from_notebook.yml
@@ -35,13 +35,13 @@ jobs:
       - name: Sync dependencies
         run: uv sync --locked --dev
 
-      - name: Convert notebooks to MDX + update docs.json
+      - name: Convert notebooks to MDX + update mint.json
         run: uv run python scripts/convert.py
 
       - name: Commit changes (generated docs)
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add docs/notebooks docs/docs.json
+          git add docs/notebooks docs/mint.json
           git diff --cached --quiet || git commit -m "docs: sync notebooks"
           git push
