--- a/.github/workflows/docs_from_notebook.yml
+++ b/.github/workflows/docs_from_notebook.yml
@@ -42,6 +42,6 @@ jobs:
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add docs/notebooks docs/mint.json
+          git add docs/notebooks mint.json
           git diff --cached --quiet || git commit -m "docs: sync notebooks"
           git push
